Finished up basic styling.

--- a/index.html
+++ b/index.html
@@ -1,38 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>NFT Preview Card</title>
-</head>
-<body>
-  <div class="page">
-  <div class="main-container">
-    <div class="picture">
-      <img src="./images/image-equilibrium.jpg">
-    </div>
-    <div class="text">
-      <h1>Equilibrium #3429</h1>
-      <h2>Our Equilibrium collection promotes balance and calm.</h2>
-    </div>
-    <div class="info-text">
-      <div class="price">
-        <img src="./images/icon-ethereum.svg">
-        <p class="price">0.041 ETH</p>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@300;500;600;700;800&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="styles.css" />
+    <title>NFT Preview Card</title>
+  </head>
+  <body>
+    <div class="page">
+      <div class="main-container">
+        <div class="picture">
+          <img src="./images/image-equilibrium.jpg" />
+        </div>
+        <div class="text">
+          <h1 class="title-text">Equilibrium #3429</h1>
+          <h2 class="description">Our Equilibrium collection promotes balance and calm.</h2>
+        </div>
+        <div class="info-text">
+          <div class="price">
+            <img src="./images/icon-ethereum.svg" />
+            <p class="small-text price-text">0.041 ETH</p>
+          </div>
+          <div class="time">
+            <img src="/images/icon-clock.svg" />
+            <p class="small-text time-text">3 days left</p>
+          </div>
+        </div>
+        <hr>
+        <div class="author">
+          <img src="/images/image-avatar.png" />
+          <p class="small-text constant">Creation of</p>
+          <p class="small-text username">Jules Wyvern</p>
+        </div>
       </div>
-      <div class="time">
-        <img src="/images/icon-clock.svg">
-        <p class="grey-bold-small">3 days left</p>
-      </div>
     </div>
-    <div class="author">
-      <img src="/images/image-avatar.png">
-      <p class="grey-bold-small">Creation of</p>
-      <p class="username">Jules Wyvern</p>
-    </div>
-  </div>
-  </div>
   </body>
 </html>
