--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@300;500;600;700;800&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="styles.css" />
     <title>NFT Preview Card</title>
   </head>
@@ -17,7 +17,7 @@
           <img src="./images/image-equilibrium.jpg" />
         </div>
         <div class="text">
-          <h1 class="title-text">Equilibrium #3429</h1>
+          <h1 class="title-text white-text">Equilibrium #3429</h1>
           <h2 class="description">Our Equilibrium collection promotes balance and calm.</h2>
         </div>
         <div class="info-text">
@@ -27,14 +27,14 @@
           </div>
           <div class="time">
             <img src="/images/icon-clock.svg" />
-            <p class="small-text time-text">3 days left</p>
+            <p class="small-text soft-blue-text">3 days left</p>
           </div>
         </div>
         <hr>
         <div class="author">
           <img src="/images/image-avatar.png" />
-          <p class="small-text constant">Creation of</p>
-          <p class="small-text username">Jules Wyvern</p>
+          <p class="small-text soft-blue-text">Creation of</p>
+          <p class="small-text white-text">Jules Wyvern</p>
         </div>
       </div>
     </div>
