--- a/index.html
+++ b/index.html
@@ -4,21 +4,30 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles.css" />
     <title>NFT Preview Card</title>
   </head>
   <body>
     <div class="page">
       <div class="main-container">
+        <div class="overlay"></div>
+        <div class="overlay-image">
+          <img src="./images/icon-view.svg" />
+        </div>
         <div class="picture">
           <img src="./images/image-equilibrium.jpg" />
         </div>
         <div class="text">
           <h1 class="title-text white-text">Equilibrium #3429</h1>
-          <h2 class="description">Our Equilibrium collection promotes balance and calm.</h2>
+          <h2 class="description">
+            Our Equilibrium collection promotes balance and calm.
+          </h2>
         </div>
         <div class="info-text">
           <div class="price">
@@ -30,7 +39,7 @@
             <p class="small-text soft-blue-text">3 days left</p>
           </div>
         </div>
-        <hr>
+        <hr />
         <div class="author">
           <img src="/images/image-avatar.png" />
           <p class="small-text soft-blue-text">Creation of</p>
