Delete incorrect image overlay

--- a/index.html
+++ b/index.html
@@ -16,12 +16,8 @@
   <body>
     <div class="page">
       <div class="main-container">
-        <div class="overlay"></div>
-        <div class="overlay-image">
-          <img src="./images/icon-view.svg" />
-        </div>
         <div class="picture">
-          <img src="./images/image-equilibrium.jpg" />
+          <img src="./images/image-equilibrium.jpg" class="image" />
         </div>
         <div class="text">
           <h1 class="title-text white-text">Equilibrium #3429</h1>
